@@ -1,58 +1,39 @@
-/*
- * Copyright 2000-2017 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+// Copyright 2000-2019 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
 package com.intellij.openapi.wm.impl;
 
 import com.intellij.ide.IdeEventQueue;
-import com.intellij.ide.UiActivity;
 import com.intellij.ide.UiActivityMonitor;
-import com.intellij.internal.focus.FocusTracesAction;
 import com.intellij.openapi.Disposable;
 import com.intellij.openapi.actionSystem.DataContext;
 import com.intellij.openapi.actionSystem.PlatformDataKeys;
-import com.intellij.openapi.application.*;
-import com.intellij.openapi.diagnostic.Logger;
+import com.intellij.openapi.application.Application;
+import com.intellij.openapi.application.ApplicationActivationListener;
+import com.intellij.openapi.application.ApplicationManager;
+import com.intellij.openapi.application.ModalityState;
+import com.intellij.openapi.application.ex.ApplicationManagerEx;
+import consulo.logging.Logger;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.JBPopup;
 import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.registry.Registry;
-import com.intellij.openapi.wm.*;
+import com.intellij.openapi.wm.FocusRequestor;
+import com.intellij.openapi.wm.IdeFocusManager;
+import com.intellij.openapi.wm.IdeFrame;
 import com.intellij.openapi.wm.ex.IdeFocusTraversalPolicy;
-import com.intellij.openapi.wm.ex.LayoutFocusTraversalPolicyExt;
-import com.intellij.reference.SoftReference;
-import com.intellij.ui.FocusTrackback;
+import com.intellij.ui.popup.AbstractPopup;
 import com.intellij.util.concurrency.EdtExecutorService;
-import com.intellij.util.containers.WeakValueHashMap;
+import com.intellij.util.containers.ContainerUtil;
 import com.intellij.util.ui.UIUtil;
-import consulo.application.TransactionGuardEx;
 import consulo.awt.TargetAWT;
-import consulo.wm.ApplicationIdeFocusManager;
-import gnu.trove.TIntIntHashMap;
-import gnu.trove.TIntIntProcedure;
-
 import javax.annotation.Nonnull;
+
 import javax.annotation.Nullable;
 import javax.inject.Inject;
 import javax.inject.Singleton;
 import javax.swing.*;
 import java.awt.*;
 import java.awt.event.FocusEvent;
-import java.awt.event.KeyEvent;
 import java.awt.event.WindowEvent;
-import java.lang.ref.Reference;
-import java.lang.ref.WeakReference;
 import java.text.SimpleDateFormat;
 import java.util.List;
 import java.util.*;
@@ -60,95 +41,39 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 @Singleton
-public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable {
+public final class FocusManagerImpl implements IdeFocusManager, Disposable {
   private static final Logger LOG = Logger.getInstance(FocusManagerImpl.class);
-  private static final UiActivity FOCUS = new UiActivity.Focus("awtFocusRequest");
-  private static final UiActivity TYPEAHEAD = new UiActivity.Focus("typeahead");
 
-  private final Application myApp;
-
-  private FocusCommand myRequestFocusCmd;
-  private final List<FocusCommand> myFocusRequests = new ArrayList<>();
-
-  private final List<KeyEvent> myToDispatchOnDone = new ArrayList<>();
-
-  private Reference<FocusCommand> myLastForcedRequest;
-
-  private FocusCommand myFocusCommandOnAppActivation;
-  private ActionCallback myCallbackOnActivation;
-  private final boolean isInternalMode = Application.get().isInternal();
-  private final LinkedList<FocusRequestInfo> myRequests = new LinkedList<>();
+  private final List<FocusRequestInfo> myRequests = new LinkedList<>();
 
   private final IdeEventQueue myQueue;
-  private final KeyProcessorContext myKeyProcessorContext = new KeyProcessorContext();
-
-  private long myCmdTimestamp;
-  private long myForcedCmdTimestamp;
 
   private final EdtAlarm myFocusedComponentAlarm;
   private final EdtAlarm myForcedFocusRequestsAlarm;
 
-  private final EdtAlarm myIdleAlarm;
-  private final Set<Runnable> myIdleRequests = new LinkedHashSet<>();
-
-  private boolean myFlushWasDelayedToFixFocus;
-  private ExpirableRunnable myFocusRevalidator;
-
   private final Set<FurtherRequestor> myValidFurtherRequestors = new HashSet<>();
 
   private final Set<ActionCallback> myTypeAheadRequestors = new HashSet<>();
-  private final UiActivityMonitor myActivityMonitor;
   private boolean myTypeaheadEnabled = true;
-  private int myModalityStateForLastForcedRequest;
 
-
-  private class IdleRunnable extends EdtRunnable {
-    @Override
-    public void runEdt() {
-      if (canFlushIdleRequests()) {
-        flushIdleRequests();
-      }
-      else {
-        if (processFocusRevalidation()) {
-          if (isFocusTransferReady()) {
-            flushIdleRequests();
-          }
-        }
-
-        restartIdleAlarm();
-      }
-    }
-  }
-
-  private boolean canFlushIdleRequests() {
-    Component focusOwner = getFocusOwner();
-    return isFocusTransferReady() &&
-           !isIdleQueueEmpty() &&
-           !IdeEventQueue.getInstance().isDispatchingFocusEvent() &&
-           !(focusOwner == null && (!myValidFurtherRequestors.isEmpty() || myFocusRevalidator != null && !myFocusRevalidator.isExpired()));
-  }
-
-  private final Map<IdeFrame, Component> myLastFocused = new WeakValueHashMap<>();
-  private final Map<IdeFrame, Component> myLastFocusedAtDeactivation = new WeakValueHashMap<>();
+  private final Map<IdeFrame, Component> myLastFocused = ContainerUtil.createWeakValueMap();
+  private final Map<IdeFrame, Component> myLastFocusedAtDeactivation = ContainerUtil.createWeakValueMap();
 
   private DataContext myRunContext;
-
-  private final TIntIntHashMap myModalityCount2FlushCount = new TIntIntHashMap();
 
   private IdeFrame myLastFocusedFrame;
 
   @Inject
-  public FocusManagerImpl(@Nonnull Application app, WindowManager wm, UiActivityMonitor monitor) {
-    myApp = app;
+  public FocusManagerImpl(Application application) {
+    UiActivityMonitor.getInstance();
+
     myQueue = IdeEventQueue.getInstance();
-    myActivityMonitor = monitor;
 
     myFocusedComponentAlarm = new EdtAlarm();
     myForcedFocusRequestsAlarm = new EdtAlarm();
-    myIdleAlarm = new EdtAlarm();
 
-    final AppListener myAppListener = new AppListener();
-    myApp.getMessageBus().connect().subscribe(ApplicationActivationListener.TOPIC, myAppListener);
+    final AppListener listener = new AppListener();
+    application.getMessageBus().connect().subscribe(ApplicationActivationListener.TOPIC, listener);
 
     IdeEventQueue.getInstance().addDispatcher(e -> {
       if (e instanceof FocusEvent) {
@@ -203,58 +128,27 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
 
   @Override
   public AsyncResult<Void> requestFocusInProject(@Nonnull Component c, @Nullable Project project) {
-    return requestFocus(new FocusCommand.ByComponent(c, c, project, new Exception()), false);
-  }
-
-  @Nonnull
-  @Override
-  public AsyncResult<Void> requestFocus(@Nonnull consulo.ui.Component c, boolean forced) {
-    if (c instanceof consulo.ui.Window) {
-      return requestFocus(TargetAWT.to((consulo.ui.Window)c), forced);
+    if (ApplicationManagerEx.getApplicationEx().isActive() || !Registry.is("suppress.focus.stealing")) {
+      c.requestFocus();
     }
-    throw new UnsupportedOperationException();
+    else {
+      c.requestFocusInWindow();
+    }
+    return AsyncResult.resolved();
   }
 
   @Override
   @Nonnull
   public AsyncResult<Void> requestFocus(@Nonnull final Component c, final boolean forced) {
-    return requestFocus(new FocusCommand.ByComponent(c, new Exception()), forced);
+    c.requestFocus();
+    return AsyncResult.resolved();
   }
 
-  @Override
   @Nonnull
-  public AsyncResult<Void> requestFocus(@Nonnull final FocusCommand command, final boolean forced) {
-    assertDispatchThread();
-
-    if (isInternalMode) {
-      recordCommand(command, new Throwable(), forced);
-    }
-    final AsyncResult<Void> result = new AsyncResult<Void>();
-
-    myActivityMonitor.addActivity(FOCUS, ModalityState.any());
-    if (!forced) {
-
-      UIUtil.invokeAndWaitIfNeeded(new Runnable() {
-        @Override
-        public void run() {
-          if (!myFocusRequests.contains(command)) {
-            myFocusRequests.add(command);
-          }
-        }
-      });
-
-      SwingUtilities.invokeLater(() -> {
-        resetUnforcedCommand(command);
-        _requestFocus(command, forced, result);
-      });
-    }
-    else {
-      _requestFocus(command, forced, result);
-    }
-
-    result.doWhenProcessed(() -> restartIdleAlarm());
-
-    return result;
+  @Override
+  public AsyncResult<Void> requestFocus(@Nonnull consulo.ui.Component c, boolean forced) {
+    requestFocus(TargetAWT.to(c), forced);
+    return AsyncResult.resolved();
   }
 
   @Nonnull
@@ -265,191 +159,12 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
   public void recordFocusRequest(Component c, boolean forced) {
     myRequests.add(new FocusRequestInfo(c, new Throwable(), forced));
     if (myRequests.size() > 200) {
-      myRequests.removeFirst();
+      myRequests.remove(0);
     }
   }
 
-  private void recordCommand(@Nonnull FocusCommand command, @Nonnull Throwable trace, boolean forced) {
-    if (FocusTracesAction.isActive()) {
-      recordFocusRequest(command.getDominationComponent(), forced);
-    }
-  }
-
-  private void _requestFocus(@Nonnull final FocusCommand command, final boolean forced, @Nonnull final ActionCallback result) {
-    result.doWhenProcessed(() -> maybeRemoveFocusActivity());
-
-    if (checkForRejectOrByPass(command, forced, result)) return;
-
-    setCommand(command);
-    command.setCallback(result);
-
-    if (forced) {
-      myForcedFocusRequestsAlarm.cancelAllRequests();
-      setLastEffectiveForcedRequest(command);
-    }
-
-    SwingUtilities.invokeLater(() -> {
-      if (checkForRejectOrByPass(command, forced, result)) return;
-
-      if (myRequestFocusCmd == command) {
-        final TimedOutCallback focusTimeout =
-                new TimedOutCallback(Registry.intValue("actionSystem.commandProcessingTimeout"), "Focus command timed out, cmd=" + command, command.getAllocation(), true) {
-                  @Override
-                  protected void onTimeout() {
-                    forceFinishFocusSettleDown(command, result);
-                  }
-                };
-
-        if (command.invalidatesRequestors()) {
-          myCmdTimestamp++;
-        }
-        revalidateFurtherRequestors();
-        if (forced) {
-          if (command.invalidatesRequestors()) {
-            myForcedCmdTimestamp++;
-          }
-          revalidateFurtherRequestors();
-        }
-
-        command.setForced(forced);
-        command.run().doWhenDone(() -> UIUtil.invokeLaterIfNeeded(() -> {
-          resetCommand(command, false);
-          result.setDone();
-        })).doWhenRejected(() -> {
-          result.setRejected();
-          resetCommand(command, true);
-        }).doWhenProcessed(() -> {
-          if (forced) {
-            myForcedFocusRequestsAlarm.addRequest(new SetLastEffectiveRunnable(), 250);
-          }
-        }).notify(focusTimeout);
-      }
-      else {
-        rejectCommand(command, result);
-      }
-    });
-  }
-
-  private void maybeRemoveFocusActivity() {
-    if (isFocusTransferReady()) {
-      myActivityMonitor.removeActivity(FOCUS);
-    }
-  }
-
-  private boolean checkForRejectOrByPass(@Nonnull FocusCommand cmd, final boolean forced, @Nonnull ActionCallback result) {
-    if (cmd.isExpired()) {
-      rejectCommand(cmd, result);
-      return true;
-    }
-
-    final FocusCommand lastRequest = getLastEffectiveForcedRequest();
-
-    if (!forced && !isUnforcedRequestAllowed()) {
-      if (cmd.equals(lastRequest)) {
-        resetCommand(cmd, false);
-        result.setDone();
-      }
-      else {
-        rejectCommand(cmd, result);
-      }
-      return true;
-    }
-
-
-    if (lastRequest != null && lastRequest.dominatesOver(cmd)) {
-      rejectCommand(cmd, result);
-      return true;
-    }
-
-    if (!Registry.is("focus.fix.lost.cursor")) {
-      boolean doNotExecuteBecauseAppIsInactive = !myApp.isActive() && !canExecuteOnInactiveApplication(cmd) && Registry.is("actionSystem.suspendFocusTransferIfApplicationInactive");
-
-      if (doNotExecuteBecauseAppIsInactive) {
-        if (myCallbackOnActivation != null) {
-          myCallbackOnActivation.setRejected();
-          if (myFocusCommandOnAppActivation != null) {
-            resetCommand(myFocusCommandOnAppActivation, true);
-          }
-        }
-
-        myFocusCommandOnAppActivation = cmd;
-        myCallbackOnActivation = result;
-
-        return true;
-      }
-    }
-
-    return false;
-  }
-
-  private void setCommand(@Nonnull final FocusCommand command) {
-    myRequestFocusCmd = command;
-
-    UIUtil.invokeAndWaitIfNeeded(new Runnable() {
-      @Override
-      public void run() {
-        if (!myFocusRequests.contains(command)) {
-          myFocusRequests.add(command);
-        }
-      }
-    });
-  }
-
-  private void resetCommand(@Nonnull final FocusCommand cmd, boolean reject) {
-
-    assertDispatchThread();
-
-    if (cmd == myRequestFocusCmd) {
-      myRequestFocusCmd = null;
-    }
-
-    final KeyEventProcessor processor = cmd.getProcessor();
-    if (processor != null) {
-      processor.finish(myKeyProcessorContext);
-    }
-
-    UIUtil.invokeAndWaitIfNeeded(new Runnable() {
-      @Override
-      public void run() {
-        myFocusRequests.remove(cmd);
-      }
-    });
-
-    if (reject) {
-      ActionCallback cb = cmd.getCallback();
-      if (cb != null && !cb.isProcessed()) {
-        cmd.getCallback().setRejected();
-      }
-    }
-  }
-
-  private void resetUnforcedCommand(@Nonnull final FocusCommand cmd) {
-    UIUtil.invokeAndWaitIfNeeded(new Runnable() {
-      @Override
-      public void run() {
-        myFocusRequests.remove(cmd);
-      }
-    });
-  }
-
-  private static boolean canExecuteOnInactiveApplication(@Nonnull FocusCommand cmd) {
-    return cmd.canExecuteOnInactiveApp();
-  }
-
-  private void setLastEffectiveForcedRequest(@Nullable FocusCommand command) {
-    myLastForcedRequest = command == null ? null : new WeakReference<>(command);
-    myModalityStateForLastForcedRequest = getCurrentModalityCount();
-  }
-
-  @Nullable
-  private FocusCommand getLastEffectiveForcedRequest() {
-    final FocusCommand request = SoftReference.dereference(myLastForcedRequest);
-    return request != null && !request.isExpired() ? request : null;
-  }
-
-  public boolean isUnforcedRequestAllowed() {
-    if (getLastEffectiveForcedRequest() == null) return true;
-    return myModalityStateForLastForcedRequest != getCurrentModalityCount();
+  public static IdeFocusManager getInstance() {
+    return ApplicationManager.getApplication().getComponent(IdeFocusManager.class);
   }
 
   @Override
@@ -462,22 +177,6 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
     myValidFurtherRequestors.clear();
   }
 
-  private class KeyProcessorContext implements KeyEventProcessor.Context {
-    @Override
-    @Nonnull
-    public List<KeyEvent> getQueue() {
-      return myToDispatchOnDone;
-    }
-
-    @Override
-    public void dispatch(@Nonnull final List<KeyEvent> events) {
-      doWhenFocusSettlesDown(() -> {
-        myToDispatchOnDone.addAll(events);
-        restartIdleAlarm();
-      });
-    }
-  }
-
   @Override
   public void doWhenFocusSettlesDown(@Nonnull ExpirableRunnable runnable) {
     doWhenFocusSettlesDown((Runnable)runnable);
@@ -485,36 +184,7 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
 
   @Override
   public void doWhenFocusSettlesDown(@Nonnull final Runnable runnable) {
-    boolean invokedOnEdt = ApplicationManager.getApplication().isDispatchThread();
-    UIUtil.invokeLaterIfNeeded(() -> {
-      if (isFlushingIdleRequests()) {
-        myIdleRequests.add(runnable);
-        return;
-      }
-
-      if (myRunContext != null || invokedOnEdt && canFlushIdleRequests()) {
-        flushRequest(runnable);
-        return;
-      }
-
-      final boolean needsRestart = isIdleQueueEmpty();
-      if (myIdleRequests.contains(runnable)) {
-        myIdleRequests.remove(runnable);
-        myIdleRequests.add(runnable);
-      }
-      else {
-        myIdleRequests.add(runnable);
-      }
-
-      if (canFlushIdleRequests()) {
-        flushIdleRequests();
-      }
-      else {
-        if (needsRestart) {
-          restartIdleAlarm();
-        }
-      }
-    });
+    myQueue.executeWhenAllFocusEventsLeftTheQueue(runnable);
   }
 
   @Override
@@ -522,7 +192,9 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
     AtomicBoolean immediate = new AtomicBoolean(true);
     doWhenFocusSettlesDown(() -> {
       if (immediate.get()) {
-        runnable.run();
+        if (!(runnable instanceof ExpirableRunnable) || !((ExpirableRunnable)runnable).isExpired()) {
+          runnable.run();
+        }
         return;
       }
 
@@ -531,223 +203,6 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
     immediate.set(false);
   }
 
-  private void restartIdleAlarm() {
-    if (!ApplicationManager.getApplication().isActive()) return;
-    myIdleAlarm.cancelAllRequests();
-    myIdleAlarm.addRequest(new IdleRunnable(), Registry.intValue("actionSystem.focusIdleTimeout"));
-  }
-
-  private void flushIdleRequests() {
-    int currentModalityCount = getCurrentModalityCount();
-    try {
-      incFlushingRequests(1, currentModalityCount);
-
-      if (!isTypeaheadEnabled()) {
-        myToDispatchOnDone.clear();
-        myTypeAheadRequestors.clear();
-      }
-
-      if (!myToDispatchOnDone.isEmpty() && myTypeAheadRequestors.isEmpty()) {
-        final KeyEvent[] events = myToDispatchOnDone.toArray(new KeyEvent[myToDispatchOnDone.size()]);
-
-        IdeEventQueue.getInstance().getKeyEventDispatcher().resetState();
-
-        for (int eachIndex = 0; eachIndex < events.length; eachIndex++) {
-          if (!isFocusTransferReady()) {
-            break;
-          }
-
-          KeyEvent each = events[eachIndex];
-
-          Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
-          if (owner == null) {
-            owner = JOptionPane.getRootFrame();
-          }
-
-          boolean metaKey = each.getKeyCode() == KeyEvent.VK_ALT || each.getKeyCode() == KeyEvent.VK_CONTROL || each.getKeyCode() == KeyEvent.VK_SHIFT || each.getKeyCode() == KeyEvent.VK_META;
-
-          boolean toDispatch = false;
-          if (!metaKey && (each.getID() == KeyEvent.KEY_RELEASED || each.getID() == KeyEvent.KEY_TYPED)) {
-            for (int i = 0; i < eachIndex; i++) {
-              final KeyEvent prev = events[i];
-              if (prev == null) continue;
-
-              if (prev.getID() == KeyEvent.KEY_PRESSED) {
-                if (prev.getKeyCode() == each.getKeyCode() || prev.getKeyChar() == each.getKeyChar()) {
-                  toDispatch = true;
-                  events[i] = null;
-                  break;
-                }
-              }
-            }
-          }
-          else {
-            toDispatch = true;
-          }
-
-          myToDispatchOnDone.remove(each);
-          if (!toDispatch) {
-            continue;
-          }
-
-
-          KeyEvent keyEvent = new KeyEvent(owner, each.getID(), each.getWhen(), each.getModifiersEx(), each.getKeyCode(), each.getKeyChar(), each.getKeyLocation());
-
-
-          if (SwingUtilities.getWindowAncestor(owner) != null) {
-            IdeEventQueue.getInstance().dispatchEvent(keyEvent);
-          }
-          else {
-            ((TransactionGuardEx)TransactionGuard.getInstance()).performUserActivity(() -> myQueue._dispatchEvent(keyEvent, true));
-          }
-        }
-
-        if (myToDispatchOnDone.isEmpty() && myTypeAheadRequestors.isEmpty()) {
-          myActivityMonitor.removeActivity(TYPEAHEAD);
-        }
-      }
-
-      if (!isFocusBeingTransferred()) {
-        boolean focusOk = getFocusOwner() != null;
-        if (!focusOk && !myFlushWasDelayedToFixFocus) {
-          IdeEventQueue.getInstance().fixStickyFocusedComponents(null);
-          myFlushWasDelayedToFixFocus = true;
-        }
-        else if (!focusOk) {
-          myFlushWasDelayedToFixFocus = false;
-        }
-
-        if (canFlushIdleRequests() && getFlushingIdleRequests() <= 1 && (focusOk || !myFlushWasDelayedToFixFocus)) {
-          myFlushWasDelayedToFixFocus = false;
-          flushNow();
-        }
-      }
-    }
-    finally {
-      incFlushingRequests(-1, currentModalityCount);
-      if (!isIdleQueueEmpty()) {
-        restartIdleAlarm();
-      }
-
-      maybeRemoveFocusActivity();
-    }
-  }
-
-  private boolean processFocusRevalidation() {
-    ExpirableRunnable revalidator = myFocusRevalidator;
-    myFocusRevalidator = null;
-
-    if (revalidator != null && !revalidator.isExpired()) {
-      revalidator.run();
-      return true;
-    }
-
-    return false;
-  }
-
-  private void flushNow() {
-    final Runnable[] all = myIdleRequests.toArray(new Runnable[myIdleRequests.size()]);
-    myIdleRequests.clear();
-    for (int i = 0; i < all.length; i++) {
-      flushRequest(all[i]);
-      if (isFocusBeingTransferred()) {
-        for (int j = i + 1; j < all.length; j++) {
-          myIdleRequests.add(all[j]);
-        }
-        break;
-      }
-    }
-
-    maybeRemoveFocusActivity();
-  }
-
-  private static void flushRequest(Runnable each) {
-    if (each == null) return;
-    if (each instanceof Expirable) {
-      if (!((Expirable)each).isExpired()) {
-        each.run();
-      }
-    }
-    else {
-      each.run();
-    }
-  }
-
-  public boolean isFocusTransferReady() {
-    assertDispatchThread();
-
-    if (myRunContext != null) return true;
-
-    invalidateFocusRequestsQueue();
-
-    if (!myFocusRequests.isEmpty()) return false;
-    if (myQueue == null) return true;
-
-    return !myQueue.isSuspendMode() && !myQueue.hasFocusEventsPending();
-  }
-
-  private void invalidateFocusRequestsQueue() {
-    assertDispatchThread();
-    UIUtil.invokeAndWaitIfNeeded(new Runnable() {
-      @Override
-      public void run() {
-        if (myFocusRequests.isEmpty()) return;
-
-        FocusCommand[] requests = myFocusRequests.toArray(new FocusCommand[myFocusRequests.size()]);
-        boolean wasChanged = false;
-        for (FocusCommand each : requests) {
-          if (each.isExpired()) {
-            resetCommand(each, true);
-            wasChanged = true;
-          }
-        }
-
-        if (wasChanged && myFocusRequests.isEmpty()) {
-          restartIdleAlarm();
-        }
-      }
-    });
-  }
-
-  private boolean isIdleQueueEmpty() {
-    return isPendingKeyEventsRedispatched() && myIdleRequests.isEmpty();
-  }
-
-  private boolean isPendingKeyEventsRedispatched() {
-    return myToDispatchOnDone.isEmpty();
-  }
-
-  @Override
-  public boolean dispatch(@Nonnull KeyEvent e) {
-    if (!isTypeaheadEnabled()) return false;
-    if (isFlushingIdleRequests()) return false;
-
-    assertDispatchThread();
-
-    if (!isFocusTransferReady() || !isPendingKeyEventsRedispatched() || !myTypeAheadRequestors.isEmpty()) {
-      for (FocusCommand each : myFocusRequests) {
-        final KeyEventProcessor processor = each.getProcessor();
-        if (processor != null) {
-          final Boolean result = processor.dispatch(e, myKeyProcessorContext);
-          if (result != null) {
-            if (result.booleanValue()) {
-              myActivityMonitor.addActivity(TYPEAHEAD, ModalityState.any());
-              return true;
-            }
-            return false;
-          }
-        }
-      }
-
-      myToDispatchOnDone.add(e);
-      myActivityMonitor.addActivity(TYPEAHEAD, ModalityState.any());
-
-      restartIdleAlarm();
-
-      return true;
-    }
-    return false;
-  }
 
   @Override
   public void setTypeaheadEnabled(boolean enabled) {
@@ -788,116 +243,9 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
     done.notify(new TimedOutCallback(Registry.intValue("actionSystem.commandProcessingTimeout"), "Typeahead request blocked", new Exception() {
       @Override
       public String getMessage() {
-        return "Time: " + (System.currentTimeMillis() - currentTime) + "; cause: " + cause;
+        return "Time: " + (System.currentTimeMillis() - currentTime) + "; cause: " + cause + "; runnable waiting for the focus change: " + IdeEventQueue.getInstance().runnablesWaitingForFocusChangeState();
       }
-    }, true).doWhenProcessed(() -> {
-      if (myTypeAheadRequestors.remove(done)) {
-        restartIdleAlarm();
-      }
-    }));
-  }
-
-  private boolean isFlushingIdleRequests() {
-    return getFlushingIdleRequests() > 0;
-  }
-
-  private int getFlushingIdleRequests() {
-    int currentModalityCount = getCurrentModalityCount();
-    return myModalityCount2FlushCount.get(currentModalityCount);
-  }
-
-  private void incFlushingRequests(int delta, final int currentModalityCount) {
-    if (myModalityCount2FlushCount.containsKey(currentModalityCount)) {
-      myModalityCount2FlushCount.adjustValue(currentModalityCount, delta);
-    }
-    else {
-      myModalityCount2FlushCount.put(currentModalityCount, delta);
-    }
-  }
-
-  private int getCurrentModalityCount() {
-    int modalityCount = 0;
-    Window[] windows = Window.getWindows();
-    for (Window each : windows) {
-      if (!each.isShowing()) continue;
-
-      if (each instanceof Dialog) {
-        Dialog eachDialog = (Dialog)each;
-        if (eachDialog.isModal()) {
-          modalityCount++;
-        }
-        else if (each instanceof JDialog) {
-          if (isModalContextPopup(((JDialog)each).getRootPane())) {
-            modalityCount++;
-          }
-        }
-      }
-      else if (each instanceof JWindow) {
-        JRootPane rootPane = ((JWindow)each).getRootPane();
-        if (isModalContextPopup(rootPane)) {
-          modalityCount++;
-        }
-      }
-    }
-    final int finalModalityCount = modalityCount;
-    myModalityCount2FlushCount.retainEntries(new TIntIntProcedure() {
-      @Override
-      public boolean execute(int eachModalityCount, int flushCount) {
-        return eachModalityCount <= finalModalityCount;
-      }
-    });
-
-    return modalityCount;
-  }
-
-  private static boolean isModalContextPopup(@Nonnull JRootPane rootPane) {
-    final JBPopup popup = (JBPopup)rootPane.getClientProperty(JBPopup.KEY);
-    return popup != null && popup.isModalContext();
-  }
-
-  @Nonnull
-  @Override
-  public Expirable getTimestamp(final boolean trackOnlyForcedCommands) {
-    assertDispatchThread();
-
-    return new Expirable() {
-      long myOwnStamp = trackOnlyForcedCommands ? myForcedCmdTimestamp : myCmdTimestamp;
-
-      @Override
-      public boolean isExpired() {
-        return myOwnStamp < (trackOnlyForcedCommands ? myForcedCmdTimestamp : myCmdTimestamp);
-      }
-    };
-  }
-
-  @Nonnull
-  @Override
-  public FocusRequestor getFurtherRequestor() {
-    assertDispatchThread();
-
-    FurtherRequestor requestor = new FurtherRequestor(this, getTimestamp(true));
-    myValidFurtherRequestors.add(requestor);
-    revalidateFurtherRequestors();
-    return requestor;
-  }
-
-  private void revalidateFurtherRequestors() {
-    Iterator<FurtherRequestor> requestorIterator = myValidFurtherRequestors.iterator();
-    while (requestorIterator.hasNext()) {
-      FurtherRequestor each = requestorIterator.next();
-      if (each.isExpired()) {
-        requestorIterator.remove();
-        Disposer.dispose(each);
-      }
-    }
-  }
-
-  @Override
-  public void revalidateFocus(@Nonnull final ExpirableRunnable runnable) {
-    SwingUtilities.invokeLater(() -> {
-      myFocusRevalidator = runnable;
-      restartIdleAlarm();
-    });
+    }, true).doWhenProcessed(() -> myTypeAheadRequestors.remove(done)));
   }
 
   @Override
@@ -913,11 +261,10 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
     }
 
     if (result == null) {
-      result = isFocusBeingTransferred() ? null : KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
+      result = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
     }
 
-    final boolean meaninglessOwner = UIUtil.isMeaninglessFocusOwner(result);
-    if (result == null && !isFocusBeingTransferred() || meaninglessOwner) {
+    if (result == null) {
       final Component permOwner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getPermanentFocusOwner();
       if (permOwner != null) {
         result = permOwner;
@@ -992,7 +339,7 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
 
     @Nonnull
     @Override
-    public AsyncResult<Void> requestFocus(@Nonnull consulo.ui.Component c, boolean forced) {
+    public AsyncResult<Void> requestFocus(@Nonnull Component c, boolean forced) {
       final AsyncResult<Void> result = isExpired() ? AsyncResult.rejected() : myManager.requestFocus(c, forced);
       result.doWhenProcessed(() -> Disposer.dispose(this));
       return result;
@@ -1000,7 +347,7 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
 
     @Nonnull
     @Override
-    public AsyncResult<Void> requestFocus(@Nonnull Component c, boolean forced) {
+    public AsyncResult<Void> requestFocus(@Nonnull consulo.ui.Component c, boolean forced) {
       final AsyncResult<Void> result = isExpired() ? AsyncResult.rejected() : myManager.requestFocus(c, forced);
       result.doWhenProcessed(() -> Disposer.dispose(this));
       return result;
@@ -1010,20 +357,13 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
       return myExpirable.isExpired() || myDisposed;
     }
 
-    @Nonnull
-    @Override
-    public AsyncResult<Void> requestFocus(@Nonnull FocusCommand command, boolean forced) {
-      return isExpired() ? AsyncResult.rejected() : myManager.requestFocus(command, forced);
-    }
-
     @Override
     public void dispose() {
       myDisposed = true;
     }
   }
 
-
-  static class EdtAlarm {
+  final static class EdtAlarm {
     private final Set<EdtRunnable> myRequests = new HashSet<>();
 
     public void cancelAllRequests() {
@@ -1039,37 +379,10 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
     }
   }
 
-  private void forceFinishFocusSettleDown(@Nonnull FocusCommand cmd, @Nonnull ActionCallback cmdCallback) {
-    rejectCommand(cmd, cmdCallback);
-  }
-
-
-  private void rejectCommand(@Nonnull FocusCommand cmd, @Nonnull ActionCallback callback) {
-    resetCommand(cmd, true);
-    resetUnforcedCommand(cmd);
-
-    callback.setRejected();
-  }
-
   private class AppListener implements ApplicationActivationListener {
 
     @Override
-    public void applicationActivated(final IdeFrame ideFrame) {
-      final FocusCommand cmd = myFocusCommandOnAppActivation;
-      ActionCallback callback = myCallbackOnActivation;
-      myFocusCommandOnAppActivation = null;
-      myCallbackOnActivation = null;
-
-      if (cmd != null) {
-        requestFocus(cmd, true).notify(callback);
-      }
-      else {
-        focusLastFocusedComponent(ideFrame);
-      }
-    }
-
-    @Override
-    public void delayedApplicationDeactivated(IdeFrame ideFrame) {
+    public void delayedApplicationDeactivated(@Nonnull IdeFrame ideFrame) {
       final Component owner = KeyboardFocusManager.getCurrentKeyboardFocusManager().getFocusOwner();
       Component parent = UIUtil.findUltimateParent(owner);
 
@@ -1077,36 +390,6 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
         myLastFocusedAtDeactivation.put(ideFrame, owner);
       }
     }
-
-    private void focusLastFocusedComponent(IdeFrame ideFrame) {
-      final KeyboardFocusManager mgr = KeyboardFocusManager.getCurrentKeyboardFocusManager();
-      if (mgr.getFocusOwner() == null) {
-        Component c = getComponent(myLastFocusedAtDeactivation, ideFrame);
-        if (c == null || !c.isShowing()) {
-          c = getComponent(myLastFocusedAtDeactivation, ideFrame);
-        }
-
-        final boolean mouseEventAhead = IdeEventQueue.isMouseEventAhead(null);
-        if (c != null && c.isShowing() && !mouseEventAhead) {
-          final LayoutFocusTraversalPolicyExt policy = LayoutFocusTraversalPolicyExt.findWindowPolicy(c);
-          if (policy != null) {
-            policy.setNoDefaultComponent(true, FocusManagerImpl.this);
-          }
-          requestFocus(c, false).doWhenProcessed(() -> {
-            if (policy != null) {
-              policy.setNoDefaultComponent(false, FocusManagerImpl.this);
-            }
-          });
-        }
-      }
-
-      myLastFocusedAtDeactivation.remove(ideFrame);
-    }
-  }
-
-  @Nullable
-  private static Component getComponent(@Nonnull Map<IdeFrame, Component> map, IdeFrame frame) {
-    return map.get(frame);
   }
 
   @Override
@@ -1121,17 +404,12 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
 
     if (focused == comp || SwingUtilities.isDescendingFrom(focused, comp)) return focused;
 
-    List<JBPopup> popups = FocusTrackback.getChildPopups(comp);
+    List<JBPopup> popups = AbstractPopup.getChildPopups(comp);
     for (JBPopup each : popups) {
       if (each.isFocused()) return focused;
     }
 
     return null;
-  }
-
-  @Override
-  public boolean isFocusBeingTransferred() {
-    return !isFocusTransferReady();
   }
 
   @Nonnull
@@ -1144,50 +422,44 @@ public class FocusManagerImpl implements ApplicationIdeFocusManager, Disposable 
         toFocus = getFocusTargetFor(myLastFocusedFrame.getComponent());
       }
     }
-    else {
-      Window[] windows = Window.getWindows();
-      for (Window each : windows) {
-        if (each.isActive()) {
-          if (each instanceof JFrame) {
-            toFocus = getFocusTargetFor(((JFrame)each).getRootPane());
-            break;
-          }
-          else if (each instanceof JDialog) {
-            toFocus = getFocusTargetFor(((JDialog)each).getRootPane());
-            break;
-          }
-          else if (each instanceof JWindow) {
-            toFocus = getFocusTargetFor(((JWindow)each).getRootPane());
-            break;
-          }
-        }
+    else{
+      Optional<Component> toFocusOptional = Arrays.stream(Window.getWindows()).
+              filter(window -> window instanceof RootPaneContainer).
+              filter(window -> ((RootPaneContainer)window).getRootPane() != null).
+              filter(window -> window.isActive()).
+              findFirst().
+              map(w -> getFocusTargetFor(((RootPaneContainer)w).getRootPane()));
+
+      if (toFocusOptional.isPresent()) {
+        toFocus = toFocusOptional.get();
       }
     }
 
     if (toFocus != null) {
-      return requestFocus(new FocusCommand.ByComponent(toFocus, new Exception()).setToInvalidateRequestors(false), forced);
+      if (ApplicationManagerEx.getApplicationEx().isActive() || !Registry.is("suppress.focus.stealing")) {
+        toFocus.requestFocus();
+      }
+      else {
+        toFocus.requestFocusInWindow();
+      }
+      return AsyncResult.resolved();
     }
 
 
-    return AsyncResult.done(null);
+    return AsyncResult.resolved();
   }
 
   @Override
   public boolean isFocusTransferEnabled() {
-    if (Registry.is("focus.fix.lost.cursor")) return true;
-    return myApp.isActive() || !Registry.is("actionSystem.suspendFocusTransferIfApplicationInactive");
+    if (Registry.is("focus.fix.lost.cursor")) {
+      return true;
+    }
+    return ApplicationManager.getApplication().isActive() || !Registry.is("actionSystem.suspendFocusTransferIfApplicationInactive");
   }
 
   private static void assertDispatchThread() {
     if (Registry.is("actionSystem.assertFocusAccessFromEdt")) {
       ApplicationManager.getApplication().assertIsDispatchThread();
-    }
-  }
-
-  private class SetLastEffectiveRunnable extends EdtRunnable {
-    @Override
-    public void runEdt() {
-      setLastEffectiveForcedRequest(null);
     }
   }
 }
